Fix switcher overflow bug #1808

--- a/src/components/docs/forms/switcher/switcher-test.component.scss
+++ b/src/components/docs/forms/switcher/switcher-test.component.scss
@@ -6,7 +6,7 @@ $jnt-ng-deep: true;
 [max-height='true'] {
   @include jnt-switcher((
     vertical: (
-      max-height: 50px
+      max-height: 100px
     )
   ), '&')
 }
